--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
     <div> 
         <header> 
             <h1>Ömer ORUÇ</h1> 
-            <img src="c:\Users\omero\Desktop\WhatsApp Görsel 2025-02-25 saat 
-19.33.29_0426d313.jpg" width="100px" alt="Profile Picture"> 
+            <img src="fotom.jpg" width="100px" alt="Profile Picture"> 
             <p><strong>Coputer Engineerin Student</strong></p> 
             
         </header> 
