--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                 <h1>Ömer ORUÇ</h1> 
                 <p><strong>Computer Engineering Student</strong></p> 
             </div>
-            <img src="/api/placeholder/400/400" class="profile-image" alt="Profile Picture"> 
+            <img src="fotom.jpeg" alt="Ömer Oruç"> 
         </header> 
          
         <section> 
