--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                 <h1>Ömer ORUÇ</h1> 
                 <p><strong>Computer Engineering Student</strong></p> 
             </div>
-            <img src="fotom.jpeg" alt="Ömer Oruç"> 
+            <img src="fotom.jpg" alt="Ömer Oruç"> 
         </header> 
          
         <section> 
