--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             top: 0;
             left: 0;
             width: 100%;
-            height: 150px;
+            height: 120px; /* Azaltılmış arka plan yüksekliği */
             background: linear-gradient(135deg, #3498db, #2c3e50);
             border-radius: 8px 8px 0 0;
             z-index: 1;
@@ -55,13 +55,17 @@
             position: relative;
             z-index: 2;
             text-align: center;
-            margin-top: 80px;
+            margin-top: 60px; /* Azaltılmış üst boşluk */
         }
 
         .profile-image {
-            width: 150px;
-            height: 150px;
-
+            width: 120px; /* Küçültülmüş fotoğraf genişliği */
+            height: 120px; /* Küçültülmüş fotoğraf yüksekliği */
+            border-radius: 50%;
+            object-fit: cover;
+            border: 4px solid white; /* İnce çerçeve */
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+            margin-bottom: 15px;
         }
 
         .profile-info {
@@ -126,8 +130,7 @@
             min-width: 100px;
         }
 
-       
-         
+        /* Responsive Design kısmı kaldırıldı */
     </style>
 </head> 
  
@@ -136,7 +139,7 @@
         <header> 
             <div class="header-background"></div>
             <div class="profile-container">
-                <img src="fotom.jpg" alt="Ömer ORUÇ">
+                <img src="fotom.jpg" class="profile-image" alt="Profile Picture">
                 <div class="profile-info">
                     <h1>Ömer ORUÇ</h1> 
                     <p><strong>Computer Engineering Student</strong></p> 
