--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
         }
 
         .profile-image {
-            width: 120px; /* Küçültülmüş fotoğraf genişliği */
-            height: 120px; /* Küçültülmüş fotoğraf yüksekliği */
+            width: 200px; /* Küçültülmüş fotoğraf genişliği */
+            height: 200px; /* Küçültülmüş fotoğraf yüksekliği */
             border-radius: 50%;
             object-fit: cover;
             border: 4px solid white; /* İnce çerçeve */
@@ -139,7 +139,7 @@
         <header> 
             <div class="header-background"></div>
             <div class="profile-container">
-                <img src="fotom.jpg" class="profile-image" alt="Profile Picture">
+                <img src="fotom.jpg" class="profile-image" alt="Ömer Oruç">
                 <div class="profile-info">
                     <h1>Ömer ORUÇ</h1> 
                     <p><strong>Computer Engineering Student</strong></p> 
