--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         <header> 
             <div class="header-background"></div>
             <div class="profile-container">
-                <img src="fotom.jpg" class="profile-image" alt="Ömer Oruç">
+                <img src="foto2.jpg" class="profile-image" alt="Ömer Oruç">
                 <div class="profile-info">
                     <h1>Ömer ORUÇ</h1> 
                     <p><strong>Computer Engineering Student</strong></p> 
